--- a/frontend/src/app/components/card-component/card-component.component.html
+++ b/frontend/src/app/components/card-component/card-component.component.html
@@ -1,5 +1,25 @@
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>Send Message Here!</mat-card-title>
-    </mat-card-header>
+<div class="card-header">
+    <div class="number">
+        <span>12312313123</span>
+    </div>
+    <div class="time">
+        <span>10/15/1990 123123</span>
+    </div>
+</div>
+
+<mat-card  variant="outlined" class="message-card">  
+    <mat-card-content>
+        <div class="card-body">
+            Hello There this is a test message
+        </div>
+    </mat-card-content>
 </mat-card>
+
+<div class="card-footer">
+    <div class="status">
+        Pending
+    </div>
+    <div class="message-length">
+        125/160
+    </div>
+</div>
