--- a/frontend/src/app/components/form-component/form-component.component.html
+++ b/frontend/src/app/components/form-component/form-component.component.html
@@ -1,1 +1,13 @@
-<p>form-component works!</p>
+<div>
+    <div class="header">
+        <h2>New Message</h2>
+    </div>
+    <div>
+        <div>
+            <span>Phone Number</span>
+        </div>
+        <div>
+
+        </div>
+    </div>
+</div>
