--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -65,7 +65,6 @@
     width: 100%;
     min-height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
     padding: 1rem;
     box-sizing: inherit;
@@ -78,9 +77,8 @@
 
   .content {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width: 100%;
-    max-width: 700px;
     margin-bottom: 3rem;
   }
 
@@ -179,6 +177,7 @@
 
 <main class="main">
   <div class="content">
+    <app-form-component></app-form-component>
     <app-list-component></app-list-component>
   </div>
 </main>
